<resources>
    <string name="app_name">MoneyLab</string>
    <string name="toolbar">Balance:</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="add_placeholder">Add</string>
    <string name="chart_placeholder">Charts</string>

    <string name="transaction_amount_hint">Amount</string>
    <string name="transaction_name_category_hint">Name category</string>
    <string name="transaction_add_next">Add next transaction</string>

    <string name="transaction_category">Category</string>
    <string name="transaction_details">Details</string>

    <string name="category_transport">Transport</string>
    <string name="category_sport">Sport</string>
    <string name="category_others">Others</string>
    <string name="category_food">Food</string>

    <string name="salory">Salory</string>
    <string name="done">Done</string>
    <string name="income">Income</string>
    <string name="expense">Expense</string>
    <string name="choose_image">Choose image</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="edit_view">Edit transaction</string>
    <string name="error_message">Value cannot be empty</string>
    <string name="chart">Chart</string>
    <string name="add">Add</string>
    <string name="history">History</string>
    <string name="empty">No data</string>
    <string name="export_data_to_excel">Export month to excel</string>
</resources>