<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".features.editTransaction.EditTransactionFragment">

    <TextView
        android:id="@+id/edit_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/edit_view"
        android:textSize="@dimen/margin_default"

        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="SpUsage" />

    <TextView
        android:id="@+id/item_category_header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:text="@string/transaction_category"
        android:textSize="@dimen/app_text_size_micro"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edit_text_view" />

    <Button
        android:id="@+id/category_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_primary_height"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:drawablePadding="@dimen/margin_default"
        android:drawableTint="@color/white"
        android:text="@string/category_transport"
        android:textAlignment="viewStart"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/item_category_header"
        tools:drawableEnd="@drawable/ic_category_transport" />

    <ImageView
        android:id="@+id/delete_transaction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginStart="@dimen/margin_default"
        app:layout_constraintBottom_toBottomOf="@+id/amount_input_layout_edit_Transaction"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/category_button"
        app:srcCompat="@drawable/ic_baseline_close_24"
        app:tint="@color/silver" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/amount_input_layout_edit_Transaction"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toStartOf="@id/set_date_btn"
        app:layout_constraintStart_toEndOf="@+id/delete_transaction"
        app:layout_constraintTop_toBottomOf="@+id/category_button">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/amount_edit_text_editTransaction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_default"
            android:layout_marginTop="@dimen/margin_default"
            android:layout_marginEnd="@dimen/margin_default"
            android:inputType="number"
            android:maxLength="9"
            android:background="@android:color/transparent"
            android:hint="@string/transaction_amount_hint"
            android:textSize="@dimen/app_text_size_default" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/set_date_btn"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/app_text_size_micro"
        android:layout_marginEnd="@dimen/margin_default"
        app:icon="@drawable/ic_calendar"
        app:iconPadding="@dimen/margin_0.5x"
        app:iconSize="@dimen/image_size_small"
        app:layout_constraintBottom_toBottomOf="@+id/delete_transaction"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/delete_transaction"
        tools:text="25.07.22" />

    <Button
        android:id="@+id/edit_transaction_done_btn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_primary_height"
        android:layout_marginStart="@dimen/margin_default"
        android:layout_marginTop="@dimen/margin_default"
        android:layout_marginEnd="@dimen/margin_default"
        android:drawablePadding="@dimen/margin_default"
        android:drawableTint="@color/white"
        android:text="@string/done"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/amount_input_layout_edit_Transaction" />

</androidx.constraintlayout.widget.ConstraintLayout>